[project]
name = "tsa-passenger-analysis"
version = "0.1.0"
description = "TSA Passenger Data Analysis - Holiday-Aligned Weekly Averages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
]

[project.scripts]
tsa-analysis = "tsa_holiday_analysis:main"
fetch-tsa-data = "fetch_tsa_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
